--- a/app/assets/stylesheets/partials/_login.css.scss
+++ b/app/assets/stylesheets/partials/_login.css.scss
@@ -4,8 +4,8 @@
 #login_window {
   width:400px;
   margin:15% auto;
-  background:#fff;
-  @include box-shadow(0 0 5px #000);
+  background:$bright-white;
+  @include box-shadow(0, 0, 5px, #000);
   @include border-radius(6px);
   h2 {
     background-color:$powder-blue;
